verder gewerkt aan de landingspagina
en ook het logo gecropt en een nieuwe foto toegevoegd

--- a/Basispagina/Basispagina.html
+++ b/Basispagina/Basispagina.html
@@ -21,6 +21,51 @@
         </section>
     </article>
 
+    <article>
+        <img src="images/sport.jpg" alt="">
+    </article>
+
+    <article>
+        <h1>Aanbiedingen</h1>
+
+        <section>
+            <p>aanbieding</p>
+            <img src="" alt="">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                sed do eiusmod tempor incididunt ut labore et dolore 
+                magna aliqua. Gravida arcu ac tortor dignissim convallis. 
+                Elit eget gravida cum sociis natoque penatibus et magnis. 
+                In nisl nisi scelerisque eu ultrices vitae auctor eu augue. 
+                Ut etiam sit amet nisl purus. Egestas fringilla phasellus 
+                faucibus scelerisque eleifend donec pretium vulputate 
+                sapien. A diam maecenas sed enim ut sem viverra aliquet. 
+                Pharetra et ultrices neque ornare aenean euismod elementum. 
+                Sagittis purus sit amet volutpat. Sed augue lacus viverra 
+                vitae congue. Sed lectus vestibulum mattis ullamcorper 
+                velit sed ullamcorper morbi tincidunt. Vitae semper quis 
+                lectus nulla at.</p>
+        </section>
+
+        <section>
+            <p>aanbieding</p>
+            <img src="" alt="">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                sed do eiusmod tempor incididunt ut labore et dolore 
+                magna aliqua. Gravida arcu ac tortor dignissim convallis. 
+                Elit eget gravida cum sociis natoque penatibus et magnis. 
+                In nisl nisi scelerisque eu ultrices vitae auctor eu augue. 
+                Ut etiam sit amet nisl purus. Egestas fringilla phasellus 
+                faucibus scelerisque eleifend donec pretium vulputate 
+                sapien. A diam maecenas sed enim ut sem viverra aliquet. 
+                Pharetra et ultrices neque ornare aenean euismod elementum. 
+                Sagittis purus sit amet volutpat. Sed augue lacus viverra 
+                vitae congue. Sed lectus vestibulum mattis ullamcorper 
+                velit sed ullamcorper morbi tincidunt. Vitae semper quis 
+                lectus nulla at.</p>
+        </section>
+        
+    </article>
+
 
 </body>
 </html>
